--- a/AsthmaFriend/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/AsthmaFriend/en.lproj/MainStoryboard_iPhone.storyboard
@@ -12,9 +12,23 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vp7-cH-Cef">
+                            <imageView userInteractionEnabled="NO" contentMode="top" image="login_screen_image.png" translatesAutoresizingMaskIntoConstraints="NO" id="Nln-Fc-ZGI">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="642" id="Fhr-Yf-aZg"/>
+                                    <constraint firstAttribute="width" constant="436" id="ybK-6Y-Fof"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="user name" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bGH-kh-xE7">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="password" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MfP-Zu-Uw3">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7B9-1z-EZl">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Thumb picture goes here">
+                                <state key="normal" title="Sign in">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -22,25 +36,22 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="DlR-Df-Pdx" kind="modal" id="8sJ-vv-GKV"/>
+                                    <segue destination="DlR-Df-Pdx" kind="modal" id="W3c-Vy-s2p"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Put your thumb on the button below to authenticate" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="F5i-Bj-DAi">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="2Mf-We-C9K"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.80000000000000004" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="vp7-cH-Cef" firstAttribute="top" secondItem="rxq-m8-LGL" secondAttribute="top" constant="208" id="HkJ-sE-9iP"/>
-                            <constraint firstItem="F5i-Bj-DAi" firstAttribute="top" secondItem="rxq-m8-LGL" secondAttribute="top" constant="131" id="JNs-Rc-m7w"/>
-                            <constraint firstItem="F5i-Bj-DAi" firstAttribute="leading" secondItem="rxq-m8-LGL" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="PIW-lk-1C8"/>
-                            <constraint firstItem="F5i-Bj-DAi" firstAttribute="centerX" secondItem="vp7-cH-Cef" secondAttribute="centerX" type="default" id="RBu-Gv-hdk"/>
-                            <constraint firstAttribute="trailing" secondItem="F5i-Bj-DAi" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="eUc-Te-t80"/>
+                            <constraint firstItem="7B9-1z-EZl" firstAttribute="centerX" secondItem="MfP-Zu-Uw3" secondAttribute="centerX" type="default" id="06h-ST-VQM"/>
+                            <constraint firstItem="Nln-Fc-ZGI" firstAttribute="leading" secondItem="rxq-m8-LGL" secondAttribute="leading" constant="-52" id="1oD-4y-5Kz"/>
+                            <constraint firstAttribute="trailing" secondItem="MfP-Zu-Uw3" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="2RR-F9-PhC"/>
+                            <constraint firstItem="7B9-1z-EZl" firstAttribute="top" secondItem="MfP-Zu-Uw3" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="706-aq-CDZ"/>
+                            <constraint firstItem="bGH-kh-xE7" firstAttribute="top" secondItem="rxq-m8-LGL" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Bdl-Vq-v3f"/>
+                            <constraint firstItem="bGH-kh-xE7" firstAttribute="leading" secondItem="rxq-m8-LGL" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="KGl-NT-kHL"/>
+                            <constraint firstItem="MfP-Zu-Uw3" firstAttribute="top" secondItem="bGH-kh-xE7" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="gKp-RN-OPC"/>
+                            <constraint firstAttribute="trailing" secondItem="bGH-kh-xE7" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ijR-RT-mhb"/>
+                            <constraint firstItem="Nln-Fc-ZGI" firstAttribute="top" secondItem="rxq-m8-LGL" secondAttribute="top" constant="-12" id="lXO-pp-P8E"/>
+                            <constraint firstItem="MfP-Zu-Uw3" firstAttribute="leading" secondItem="rxq-m8-LGL" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="zm2-dP-rvM"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -164,7 +175,69 @@
                     <view key="view" contentMode="scaleToFill" id="Bj8-GJ-IEW">
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Blow in to the Peak Flow Device and record its color." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="243" translatesAutoresizingMaskIntoConstraints="NO" id="XB4-nl-M0m">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="MI7-JS-M4a"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XXS-88-6xc">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="48Z-cf-hPP"/>
+                                    <constraint firstAttribute="height" constant="82" id="TPo-cX-PTX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="greenb.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Obb-WD-pJC">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="XIH-ph-7Ap"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="redb.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QnO-xm-l22">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="Pjq-d7-xwV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="yellowb.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QnO-xm-l22" firstAttribute="centerX" secondItem="Bj8-GJ-IEW" secondAttribute="centerX" type="default" id="6MY-SW-kbJ"/>
+                            <constraint firstItem="XB4-nl-M0m" firstAttribute="leading" secondItem="Bj8-GJ-IEW" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="9yi-OE-NxH"/>
+                            <constraint firstItem="QnO-xm-l22" firstAttribute="bottom" secondItem="XXS-88-6xc" secondAttribute="bottom" type="default" id="FYI-Jw-U8Z"/>
+                            <constraint firstAttribute="trailing" secondItem="Obb-WD-pJC" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="H8i-zI-fHq"/>
+                            <constraint firstItem="Obb-WD-pJC" firstAttribute="top" secondItem="XB4-nl-M0m" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Yhx-im-dgx"/>
+                            <constraint firstItem="XXS-88-6xc" firstAttribute="leading" secondItem="Bj8-GJ-IEW" secondAttribute="leading" constant="26" id="fGW-Gn-28I"/>
+                            <constraint firstItem="QnO-xm-l22" firstAttribute="top" secondItem="XB4-nl-M0m" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="h9P-Od-2Oc"/>
+                            <constraint firstItem="Obb-WD-pJC" firstAttribute="bottom" secondItem="QnO-xm-l22" secondAttribute="bottom" type="default" id="lZY-Vv-HRU"/>
+                            <constraint firstItem="XXS-88-6xc" firstAttribute="top" secondItem="XB4-nl-M0m" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ojs-Hn-HcA"/>
+                            <constraint firstItem="XB4-nl-M0m" firstAttribute="top" secondItem="Bj8-GJ-IEW" secondAttribute="top" constant="20" symbolic="YES" type="default" id="yMZ-Dr-nGh"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Blow" id="Jn7-QC-97m"/>
                 </viewController>
@@ -210,8 +283,12 @@
     <resources>
         <image name="badge.png" width="30" height="30"/>
         <image name="blow.png" width="23" height="30"/>
+        <image name="greenb.png" width="100" height="100"/>
         <image name="history.png" width="30" height="27"/>
         <image name="info.png" width="30" height="30"/>
+        <image name="login_screen_image.png" width="469" height="764"/>
+        <image name="redb.png" width="100" height="100"/>
+        <image name="yellowb.png" width="100" height="100"/>
     </resources>
     <classes>
         <class className="LPHInitialViewController" superclassName="UIViewController">
