--- a/AsthmaFriend/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/AsthmaFriend/en.lproj/MainStoryboard_iPhone.storyboard
@@ -18,17 +18,29 @@
                                     <constraint firstAttribute="width" constant="436" id="ybK-6Y-Fof"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="user name" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bGH-kh-xE7">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="user name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bGH-kh-xE7">
+                                <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="cgz-sf-7Gv"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="password" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MfP-Zu-Uw3">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MfP-Zu-Uw3">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="kiZ-D6-tXF"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7B9-1z-EZl">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7B9-1z-EZl">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="OpR-e2-w1K"/>
+                                    <constraint firstAttribute="width" constant="220" id="PoB-jg-t3g"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Sign in">
+                                <state key="normal" title="Sign in" image="login_button.jpeg">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -36,20 +48,31 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="DlR-Df-Pdx" kind="modal" id="W3c-Vy-s2p"/>
+                                    <segue destination="DlR-Df-Pdx" kind="modal" modalTransitionStyle="crossDissolve" id="W3c-Vy-s2p"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Sign in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LfU-oh-Iyk">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="1Zw-JI-24V"/>
+                                    <constraint firstAttribute="width" constant="126" id="WxP-ow-mja"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.80000000000000004" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="7B9-1z-EZl" firstAttribute="centerX" secondItem="MfP-Zu-Uw3" secondAttribute="centerX" type="default" id="06h-ST-VQM"/>
                             <constraint firstItem="Nln-Fc-ZGI" firstAttribute="leading" secondItem="rxq-m8-LGL" secondAttribute="leading" constant="-52" id="1oD-4y-5Kz"/>
                             <constraint firstAttribute="trailing" secondItem="MfP-Zu-Uw3" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="2RR-F9-PhC"/>
+                            <constraint firstItem="LfU-oh-Iyk" firstAttribute="centerX" secondItem="MfP-Zu-Uw3" secondAttribute="centerX" type="default" id="6Ia-zU-e7H"/>
                             <constraint firstItem="7B9-1z-EZl" firstAttribute="top" secondItem="MfP-Zu-Uw3" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="706-aq-CDZ"/>
                             <constraint firstItem="bGH-kh-xE7" firstAttribute="top" secondItem="rxq-m8-LGL" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Bdl-Vq-v3f"/>
                             <constraint firstItem="bGH-kh-xE7" firstAttribute="leading" secondItem="rxq-m8-LGL" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="KGl-NT-kHL"/>
+                            <constraint firstItem="LfU-oh-Iyk" firstAttribute="centerY" secondItem="7B9-1z-EZl" secondAttribute="centerY" type="default" id="NL7-nY-17Z"/>
                             <constraint firstItem="MfP-Zu-Uw3" firstAttribute="top" secondItem="bGH-kh-xE7" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="gKp-RN-OPC"/>
                             <constraint firstAttribute="trailing" secondItem="bGH-kh-xE7" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ijR-RT-mhb"/>
+                            <constraint firstItem="7B9-1z-EZl" firstAttribute="centerX" secondItem="LfU-oh-Iyk" secondAttribute="centerX" type="default" id="jyh-Gs-Aqi"/>
                             <constraint firstItem="Nln-Fc-ZGI" firstAttribute="top" secondItem="rxq-m8-LGL" secondAttribute="top" constant="-12" id="lXO-pp-P8E"/>
                             <constraint firstItem="MfP-Zu-Uw3" firstAttribute="leading" secondItem="rxq-m8-LGL" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="zm2-dP-rvM"/>
                         </constraints>
@@ -480,6 +503,7 @@
         <image name="blowScreen.png" width="320" height="367"/>
         <image name="history.png" width="30" height="27"/>
         <image name="info.png" width="30" height="30"/>
+        <image name="login_button.jpeg" width="481" height="68"/>
         <image name="login_screen_image.png" width="469" height="764"/>
         <image name="pointScreen.png" width="320" height="367"/>
         <image name="scrore_badge.png" width="43" height="42"/>
